@@ -24,49 +24,58 @@ VALUE grid_splitEdgeRatio( VALUE self, VALUE n0, VALUE n1, VALUE ratio )
 				     NUM2DBL(ratio) ));
 }
 
-VALUE grid_splitEdgeIfNear( VALUE self, VALUE n0, VALUE n1,
-			    VALUE x, VALUE y, VALUE z )
+VALUE grid_splitEdgeIfNear( VALUE self, VALUE n0, VALUE n1, VALUE rb_xyz )
 {
+  int i;
+  double xyz[3];
   GET_GRID_FROM_SELF;
-  return INT2NUM(gridSplitEdgeIfNear( grid, NUM2INT(n0),  NUM2INT(n1),
-				      NUM2DBL(x), NUM2DBL(y), NUM2DBL(z) ));
+  for (i=0;i<3;i++) xyz[i] =  NUM2DBL(rb_ary_entry(rb_xyz,i));
+  return INT2NUM(gridSplitEdgeIfNear( grid, NUM2INT(n0),  NUM2INT(n1), xyz ));
 }
 
-VALUE grid_splitFaceAt( VALUE self, VALUE face, 
-			VALUE x, VALUE y, VALUE z )
+VALUE grid_splitFaceAt( VALUE self, VALUE face, VALUE rb_xyz )
 {
+  int i;
+  double xyz[3];
   GET_GRID_FROM_SELF;
-  return INT2NUM(gridSplitFaceAt( grid, NUM2INT(face),
-				  NUM2DBL(x), NUM2DBL(y), NUM2DBL(z) ));
+  for (i=0;i<3;i++) xyz[i] =  NUM2DBL(rb_ary_entry(rb_xyz,i));
+  return INT2NUM(gridSplitFaceAt( grid, NUM2INT(face), xyz ));
 }
 
-VALUE grid_splitCellAt( VALUE self, VALUE cell, 
-			VALUE x, VALUE y, VALUE z )
+VALUE grid_splitCellAt( VALUE self, VALUE cell, VALUE rb_xyz )
 {
+  int i;
+  double xyz[3];
   GET_GRID_FROM_SELF;
-  return INT2NUM(gridSplitCellAt( grid, NUM2INT(cell),
-				  NUM2DBL(x), NUM2DBL(y), NUM2DBL(z) ));
+  for (i=0;i<3;i++) xyz[i] =  NUM2DBL(rb_ary_entry(rb_xyz,i));
+  return INT2NUM(gridSplitCellAt( grid, NUM2INT(cell), xyz ));
 }
 
-VALUE grid_insertInToGeomEdge( VALUE self, VALUE x, VALUE y, VALUE z )
+VALUE grid_insertInToGeomEdge( VALUE self, VALUE rb_xyz )
 {
+  int i;
+  double xyz[3];
   GET_GRID_FROM_SELF;
-  return INT2NUM(gridInsertInToGeomEdge( grid, 
-					 NUM2DBL(x), NUM2DBL(y), NUM2DBL(z) ));
+  for (i=0;i<3;i++) xyz[i] =  NUM2DBL(rb_ary_entry(rb_xyz,i));
+  return INT2NUM(gridInsertInToGeomEdge( grid, xyz ));
 }
 
-VALUE grid_insertInToGeomFace( VALUE self, VALUE x, VALUE y, VALUE z )
+VALUE grid_insertInToGeomFace( VALUE self, VALUE rb_xyz )
 {
+  int i;
+  double xyz[3];
   GET_GRID_FROM_SELF;
-  return INT2NUM(gridInsertInToGeomFace( grid, 
-					 NUM2DBL(x), NUM2DBL(y), NUM2DBL(z) ));
+  for (i=0;i<3;i++) xyz[i] =  NUM2DBL(rb_ary_entry(rb_xyz,i));
+  return INT2NUM(gridInsertInToGeomFace( grid, xyz ));
 }
 
-VALUE grid_insertInToVolume( VALUE self, VALUE x, VALUE y, VALUE z )
+VALUE grid_insertInToVolume( VALUE self, VALUE rb_xyz )
 {
+  int i;
+  double xyz[3];
   GET_GRID_FROM_SELF;
-  return INT2NUM(gridInsertInToVolume( grid, 
-				       NUM2DBL(x), NUM2DBL(y), NUM2DBL(z) ));
+  for (i=0;i<3;i++) xyz[i] =  NUM2DBL(rb_ary_entry(rb_xyz,i));
+  return INT2NUM(gridInsertInToVolume( grid, xyz ));
 }
 
 VALUE grid_collapseEdge( VALUE self, VALUE n0, VALUE n1, VALUE ratio )
@@ -84,14 +93,14 @@ void Init_GridInsert()
   rb_define_method( cGridInsert, "adapt", grid_adapt, 2 );
   rb_define_method( cGridInsert, "splitEdge", grid_splitEdge, 2 );
   rb_define_method( cGridInsert, "splitEdgeRatio", grid_splitEdgeRatio, 3 );
-  rb_define_method( cGridInsert, "splitEdgeIfNear", grid_splitEdgeIfNear, 5 );
-  rb_define_method( cGridInsert, "splitFaceAt", grid_splitFaceAt, 4 );
-  rb_define_method( cGridInsert, "splitCellAt", grid_splitCellAt, 4 );
+  rb_define_method( cGridInsert, "splitEdgeIfNear", grid_splitEdgeIfNear, 3 );
+  rb_define_method( cGridInsert, "splitFaceAt", grid_splitFaceAt, 2 );
+  rb_define_method( cGridInsert, "splitCellAt", grid_splitCellAt, 2 );
   rb_define_method( cGridInsert, "insertInToGeomEdge", 
-		    grid_insertInToGeomEdge, 3 );
+		    grid_insertInToGeomEdge, 1 );
   rb_define_method( cGridInsert, "insertInToGeomFace", 
-		    grid_insertInToGeomFace, 3 );
+		    grid_insertInToGeomFace, 1 );
   rb_define_method( cGridInsert, "insertInToVolume", 
-		    grid_insertInToVolume, 3 );
+		    grid_insertInToVolume, 1 );
   rb_define_method( cGridInsert, "collapseEdge", grid_collapseEdge, 3 );
 }
